--- a/requirements/project/templates/login.html
+++ b/requirements/project/templates/login.html
@@ -8,6 +8,12 @@
     <title>Forum</title>
 </head>
 <body>
+        <header class="nav">
+        <div id="project_header">
+            <h1><a href="/">FORUM</a></h1>
+        </div>
+    </header>
+
     {{if .Error}}
         <div class="error-container">
             {{.Message}}
