--- a/requirements/project/templates/post_component.html
+++ b/requirements/project/templates/post_component.html
@@ -2,7 +2,7 @@
 <article class="post">
   <header>
     <h2>{{.Title}}</h2>
-    <p>Published by <strong>{{.Publisher}}</strong> in <em>{{range .Catigories}}{{.}}, {{end}}</em></p>
+    <div>Published by <strong>{{.Publisher}}</strong> in <em>{{range .Catigories}}{{.}}, {{end}}</em></div>
   </header>
 
   <section>
