--- a/requirements/project/templates/error.html
+++ b/requirements/project/templates/error.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{.ErrorTitle}}</title>
-    <link rel="stylesheet" href="/static/error.css">
-
+    <link rel="stylesheet" href="/static/css/error.css">
+    <title>Document</title>
 </head>
-
 <body>
-    <div class="error-container">
+        <div class="error-container">
         <h1 class="error-title">{{.ErrorTitle}}</h1>
         <p class="error-message">{{.ErrorMessage}}</p>
         <p class="error-description">{{.ErrorDescription}}</p>
@@ -22,5 +19,4 @@
     </div>
     <div class="error-code">{{.StatusCode}}</div>
 </body>
-
 </html>
