--- a/requirements/project/templates/new_post.html
+++ b/requirements/project/templates/new_post.html
@@ -27,16 +27,14 @@
     </div>
     {{end}}
     <div class="form-container">
-        <h1>post</h1>
+        <h4>post</h4>
         <form action="/post" method="POST">
             <div>
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" maxlength="50" required>
+                <input type="text" id="title" name="title" placeholder="title..." maxlength="50" required>
             </div>
 
             <div>
-                <label for="content">content:</label>
-                <input type="text" id="content" name="content" maxlength="400" required>
+                <input type="text" id="content" name="content" maxlength="400" placeholder="insert content here..." required>
             </div>
 
             <div>
