--- a/requirements/project/templates/register.html
+++ b/requirements/project/templates/register.html
@@ -7,6 +7,13 @@
     <title>Forum</title>
 </head>
 <body>
+
+        <header class="nav">
+        <div id="project_header">
+            <h1><a href="/">FORUM</a></h1>
+        </div>
+    </header>
+
     {{if .Error}}
         <div class="error-container">
             {{.Message}}
