--- a/requirements/project/templates/index.html
+++ b/requirements/project/templates/index.html
@@ -30,10 +30,8 @@
     </header>
 
     <section class="filter-section">
-
         <form action="/filterby" method="GET">
             <h2>Filter by Categories</h2>
-
             <div class="filters">
                 <select name="filter" id="category-filter">
 
@@ -49,9 +47,6 @@
                 <input type="submit" value="Submit">
             </div>
         </form>
-
-
-
     </section>
 
     <main class="home">
@@ -59,6 +54,19 @@
             {{block "content" .Posts}}{{end}}
         </div>
     </main>
+
+    <div class="pagination">
+        {{if .HasPrev}}
+        <a href="/?page={{.PrevPage}}">Previous</a>
+        {{end}}
+
+        Page {{.CurrentPage}}
+
+        {{if .HasNext}}
+        <a href="/?page={{.NextPage}}">Next</a>
+        {{end}}
+    </div>
+
 </body>
 
 </html>
